# netbox-ssl

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  netbox-plugin.yaml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-ci.yml  docs.yml  e2e.yml  publish.yml
1.0/: 404.html  index.html  sitemap.xml
1.0/search/: search_index.json
1.1/: 404.html  index.html  sitemap.xml
1.1/search/: search_index.json
1.2/: 404.html  index.html  sitemap.xml
dev/: 404.html  index.html  sitemap.xml
dev/search/: search_index.json
development/configuration/: plugins.py
docs/: api.md  configuration.md  data-models.md  development.md  index.md  installation.md  permissions.md  scripts.md  security-review.md  troubleshooting.md  usage.md
docs/development/: contributing.md  development.md  versioning.md
docs/explanation/: architecture.md  janus-workflow.md  security-model.md
docs/how-to/: acme-auto-renewal.md  ari-monitoring.md  aws-acm-sync.md  bulk-import.md  compliance-policies.md  external-sources.md  url-import.md
docs/images/: README.md
docs/operations/: installation.md  load-testing.md  troubleshooting.md  upgrading.md
docs/reference/: api.md  configuration.md  permissions.md  scripts.md  webhooks.md
docs/tutorials/: 01-first-import.md  02-renewal-workflow.md  03-expiry-monitoring.md
netbox_ssl/: __init__.py  checks.py  dashboard.py  navigation.py  template_content.py  urls.py
netbox_ssl/adapters/: __init__.py  aws_acm.py  base.py  generic_rest.py  lemur.py
netbox_ssl/api/: urls.py  views.py
netbox_ssl/filtersets/: __init__.py  assignments.py  certificate_authorities.py  certificates.py  compliance.py  csr.py  external_sources.py
netbox_ssl/forms/: __init__.py  assignments.py  certificate_authorities.py  certificates.py  csr.py  external_sources.py  url_import.py
netbox_ssl/graphql/: schema.py  types.py
netbox_ssl/migrations/: 0001_initial.py  0002_certificate_sans_gin_index.py  0003_certificate_acme_tracking.py  0003_certificate_chain_validation.py  0003_certificateauthority.py  0003_certificatesigningrequest.py  0003_compliance_reporting.py  0004_certificateauthority.py  0005_compliance_reporting.py  0006_certificate_chain_validation.py  0007_merge_acme_and_chain_validation.py  0008_certificateeventlog.py  0009_compliancetrendsnapshot.py  0010_certificate_archive_fields.py  0011_certificatelifecycleevent.py  0012_renewal_instructions.py  0013_external_source_framework.py  0014_merge_v080.py  0015_compliancepolicy_tag_filter.py  0016_custom_permissions.py  0017_performance_indexes.py  0018_ari_fields.py  0019_merge_v090.py  0020_compliancetrendsnapshot_netboxmodel_fields.py  0021_external_source_auth_credentials_and_region.py  0022_add_comments_fields.py  0023_compliance_tags_and_field_reconciliation.py  0024_url_import_fields.py
netbox_ssl/models/: __init__.py  assignments.py  csr.py  (+7 more)
project-requirement-document/: PRD.md  ROADMAP.md
scripts/: assert_tests_ran.py  capture_screenshots.py  create_test_data.py  crop_screenshots.py  make_logo_transparent.py  run_tests.py  screenshot_urls.txt  seed_certificates.py  seed_compliance_runs.py  smoke_test.py  take_screenshots.py
tests/: __init__.py  cert_factory.py  conftest.py  test_acme.py  test_adapters.py  test_analytics.py  test_api.py  test_api_endpoints.py  test_api_schema.py  test_ari.py  test_assignment_bugs.py  test_auto_archive.py  test_aws_acm_adapter.py  test_browser.py  test_bulk_data_import.py  test_bulk_import.py  test_bulk_operations.py  test_ca_detector.py  test_certificate_authority.py  test_chain_validator.py  test_checks.py  test_comments_field.py  test_compliance.py  test_compliance_report.py  test_contacts.py  test_credential_resolver.py  test_credential_resolver_many.py  test_credential_schema.py  test_csr.py  test_custom_fields_tags.py  test_email_notification.py  test_events.py  test_expiry_notification.py  test_expiry_scan.py  test_export.py  test_external_source.py  test_external_source_form.py  test_external_source_graphql.py  test_external_source_snapshot.py  test_external_source_validator.py  (+23 more)
(+219 files in other folders)
