[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-ssl"
version = "0.4.1"
description = "NetBox plugin for TLS/SSL certificate management - Project Janus"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "NetBox SSL Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["netbox", "plugin", "ssl", "tls", "certificate", "pki"]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/ctrl-alt-automate/netbox-ssl"
Documentation = "https://github.com/ctrl-alt-automate/netbox-ssl/wiki"
Repository = "https://github.com/ctrl-alt-automate/netbox-ssl"

[tool.setuptools.packages.find]
include = ["netbox_ssl*"]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "api: marks tests as API integration tests (requires running NetBox)",
    "browser: marks tests as browser tests (requires running NetBox and Playwright)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["netbox_ssl"]
