[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-ssl"
version = "1.0.0"
description = "NetBox plugin for TLS/SSL certificate management - Project Janus"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "NetBox SSL Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["netbox", "plugin", "ssl", "tls", "certificate", "pki"]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "playwright>=1.40",
    "locust>=2.20",
    "pip-audit>=2.7",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mike>=2.0",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-minify-plugin>=0.7",
    "mkdocs-mermaid2-plugin>=1.1",
    "pymdown-extensions>=10.7",
]

[project.urls]
Homepage = "https://github.com/ctrl-alt-automate/netbox-ssl"
Documentation = "https://ctrl-alt-automate.github.io/netbox-ssl/"
Repository = "https://github.com/ctrl-alt-automate/netbox-ssl"
Issues = "https://github.com/ctrl-alt-automate/netbox-ssl/issues"
Changelog = "https://github.com/ctrl-alt-automate/netbox-ssl/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["netbox_ssl*"]

[tool.setuptools.package-data]
netbox_ssl = [
    "templates/**/*.html",
    "templates/**/*.txt",
    "static/**/*",
]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "api: marks tests as API integration tests (requires running NetBox)",
    "browser: marks tests as browser tests (requires running NetBox and Playwright)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test files require mock setup before imports
"tests/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["netbox_ssl"]
